# llm-trajectory-dynamics

./: .gitignore  README.md  environment.yml  pyproject.toml
envs/: conda_env.yml  pytorch_cu124.txt  pytorch_cu126.txt  pytorch_cu128.txt
lmd/: __init__.py
lmd/analysis/: __init__.py  config.py
lmd/analysis/cli/: __init__.py  main.py
lmd/analysis/core/: __init__.py  aggregators.py  context.py  evaluate.py  layers.py  loader.py  metrics_base.py  registry.py  subset.py  types.py  utils.py
lmd/analysis/data/: __init__.py  filters.py  run_io.py
lmd/analysis/experiments/: __init__.py  runner.py
lmd/analysis/metrics/: __init__.py  als.py  certainty.py  cids.py  coe.py  combo.py  common_tail.py  dac.py  dynamics_combo.py  fusion.py  gmm_discriminative.py  gmm_unsupervised.py  ndr.py  nrleak.py  pca_classifier.py  rownull.py  rownull_combo.py  subspace_learned.py  supcon_tail.py  supcon_v2.py
lmd/analysis/models/: __init__.py  lm_head.py
lmd/analysis/viz/: __init__.py  plots.py  style.py
lmd/cli/: __init__.py  collect.py
lmd/core/: __init__.py  data_processor.py  evaluation_engine.py  hidden_state_extractor.py  model_manager.py  online_metrics.py
lmd/data/: __init__.py  answer_parser.py  dataset_registry.py  prompt_templates.py
lmd/storage/: __init__.py  export_manager.py  parquet_manager.py  zarr_manager.py
lmd/utils/: seed.py  types.py
scripts/: collect_all_data.py  download_datasets.py  download_models.py  monitor_collection.py  resume_collection.sh  start_collection.sh  test_collection.py
storage/datasets/: belebele.jsonl  commonsenseqa.jsonl  gsm8k.jsonl  mgsm.jsonl  theoremqa.jsonl
